--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new-template-time",
+  "name": "project-euler",
   "version": "1.0.0",
   "description": "this is a description",
   "main": "index.js",
@@ -11,7 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jacob W, Matt C, Aaron M, Albert L",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.16.0",
